# ford-vehicle-safety-agent

./: .env.example  .gitignore  README.md  ingest.py  main.py  pyproject.toml  requirements.txt
agent/: graph.py  tools.py
docs/: ABOUT.md  BUILD_PROMPT.md  PRD.md  TECHNICAL_DESIGN.md
static/: index.html
