[project]
name = "ford-genai-replica"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
